<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".Settings">

    <TextView
        android:id="@+id/SettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/SettingsTitle"
        android:textColor="?colorOnPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsTitle">

        <TextView
            android:id="@+id/ThemeSettingsTextTitle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/ThemeSettingsText"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchChangeTheme"
            style="@style/SettingsSwitch"
            android:minHeight="48dp"
            android:text="@string/SettingAlternativeThemeText"
            android:textSize="16sp"
            android:thumbTint="?colorOnPrimary"
            android:trackTint="?colorPrimaryVariant"
            android:trackTintMode="src_over" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>